# gahood_portfolio

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  descriptions.dart  main.dart
lib/components/alias_setup/: alias_textbox.dart
lib/game/: connection.dart  game.dart  input.dart  state.dart
lib/game/components/: adam.dart  bot.dart  computer.dart  degree.dart  direction.dart  hazel.dart  interactable.dart  movement.dart  object.dart  player.dart  resume.dart  text_box.dart  wall.dart  world.dart
lib/routes/: connecting.dart  disconnected.dart  game.dart  portfolio.dart  routes.dart  setup.dart
lib/widgets/: animated_icon.dart  blinking_cursor.dart  chatbox.dart  description_text.dart  fade_in_widget.dart  hover_image_button.dart  intro_widget.dart  rounded_rectangle_button.dart  skills_graph.dart  timeline.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
server/: CMakeLists.txt  Dockerfile  compile_flags.txt  package-lock.json  package.json  tsconfig.json
server/include/: game.hpp  server.hpp
server/src/: client.d.ts  client.ts  game.cpp  index.ts  main.cpp  server.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
